--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,69 @@ body {
     background-color: #ffffff;
 }
 
-/* div {
+div {
     border: 1px solid red;
-} */
+}
 
 .contaner {
     /* border: 1px solid red; */
     margin: 0 100px;
     height: 5797px;
     /* opacity: 0.2; */
+}
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    color: #ca011c;
+}
+.logo {
+    text-align: center;
+}
+.store {
+    font-size: 20px;
+    opacity: 0.9;
+}
+.site {
+    font-size: 34px;
+    color:  #ca011c;
+    text-shadow: 0 0px 3px rgb(216, 16, 16);;
+}
+.tagline {
+    font-size: 18px;
+    opacity: 0.9;
+}
+.search {
+    text-align: center;
+}
+.navbar {
+    box-shadow: 0 5px 5px rgba(0,0,0,0.3);
+    font-weight: bold;
+    background-color: #ca011c;
+    color: #ffffff;
+}
+ul > li > a {
+    color: #ffffff;
+}
+.content .contaner {
+margin-top: 20px;
+}
+ul.category {
+    margin-left:0;
+    padding-left: 0;
+}
+ul.category > li {
+    list-style-type: none;
+}
+.content-left {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
