--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,22 @@ font-family: 'Nunito Sans', sans-serif; */
 body {
     width: 100%;
     background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+}
+.wrapper{
+    width: 1024px;
+    height: 1900px;
 }
 
-div {
+/* div {
     border: 1px solid red;
-}
+} */
 
 .contaner {
     /* border: 1px solid red; */
-    margin: 0 100px;
-    height: 5797px;
+    margin: 0 50px;
+    /* height: 5797px; */
     /* opacity: 0.2; */
 }
 body {
@@ -33,20 +39,36 @@ body {
     text-align: center;
 }
 .store {
-    font-size: 20px;
+    font-size: 14px;
     opacity: 0.9;
 }
 .site {
-    font-size: 34px;
+    font-size: 30px;
     color:  #ca011c;
     text-shadow: 0 0px 3px rgb(216, 16, 16);;
 }
 .tagline {
-    font-size: 18px;
+    font-size: 14px;
     opacity: 0.9;
 }
 .search {
     text-align: center;
+}
+.img-search {
+width: 15px;
+height: 15px;
+margin: 0;
+padding: 0;
+}
+.search {
+    width: 100px;
+    height: 40px;
+}
+.phone {
+    font-size: 12px;
+}
+.phone > b {
+    font-size: 18px;
 }
 .navbar {
     box-shadow: 0 5px 5px rgba(0,0,0,0.3);
@@ -54,8 +76,19 @@ body {
     background-color: #ca011c;
     color: #ffffff;
 }
+.navbar-nav {
+    margin: -8px;
+}
+.nav-item {
+    margin: 0px 5px;
+}
 ul > li > a {
     color: #ffffff;
+    font-size: 18px;
+}
+ul > li > a:hover {
+    background-color: #a10117;
+    color: #e9e9e9;
 }
 .content .contaner {
 margin-top: 20px;
@@ -71,4 +104,43 @@ ul.category > li {
     display: flex;
     flex-direction: column;
     align-items: stretch;
+}
+.slider > img {
+    width: 100%;
+}
+.cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch
+    justify-content: space-between;
+}
+.card {
+    margin: 1px 1px 1px 1px ;
+    /* width: 150px; */
+    display: flex;
+    flex: 1 0 160px;
+}
+.card-img-top {
+    width: 100%;
+height: 120px;
+}
+.btn-custom {
+    background-color: #f3ebeb;
+    border: 1px solid #ffb3bd;
+    margin: 0px;
+    width: 100%;
+    font-size: 14px;
+}
+.btn-custom:hover {
+    background-color: #a10117;
+    border: 1px solid #a10117;
+    color: #ffffff;
+}
+footer {
+    margin-top: 325px;
+    height: 103px;
+}
+footer >div.row {
+    border-top: #ca011c 1px solid;
 }
